--- a/chatapp/app/views/room/search_form.html.erb
+++ b/chatapp/app/views/room/search_form.html.erb
@@ -34,7 +34,7 @@
               </div>
                 <div class="title"><%= room.name %></div>
             </div>
-            <% unless UserRoom.find_by(user_id: @current_user.id, room_id: room.id) %>
+            <% unless @joined_rooms.ids.include?(room.id) %>
               <div class="join-btn-area">
                 <%= link_to "参加する", room_join_path(room.id), "data-turbo": false, class: "join-btn" %>
               </div>
