--- a/chatapp/app/views/room/_new_room.html.erb
+++ b/chatapp/app/views/room/_new_room.html.erb
@@ -13,6 +13,16 @@
             <%= f.label :category, class: "form-label" %>
             <%= f.text_field :category, id: "room_category" %>
           </div>
+          <label class="room-type-cb">
+            <%= f.label :private, class: "form-label" %>
+            <%= f.check_box(:private, { checked: false }, 
+                            checked_value=true, unchecked_value=false) %>
+            <span class="invite-members">
+              <%= collection_check_boxes(:room, :user_ids, users, :id, :name) do |cb| %>
+                <%= cb.label { cb.check_box + cb.text } %>
+              <% end %>
+            </span>
+          </label>
           <div class="create-room-name">
             <%= f.label :name, class: "form-label" %>
             <%= f.text_field :name, autocomplete: "off" %>
