--- a/chatapp/app/assets/stylesheets/application.scss
+++ b/chatapp/app/assets/stylesheets/application.scss
@@ -239,6 +239,53 @@ body{
       }
       .room-type-cb.checked + .invite-members{
         display: flex;
+        cursor: pointer;
+        .select-members{
+          display: block;
+          position: relative;
+          padding-left: 30px;
+          margin-bottom: 12px;
+          cursor: pointer;
+          font-size: 14px;
+          user-select: none;
+          &:hover{
+            background: rgba(0,0,0,.05) !important;
+          }
+          .invite-cb{
+            display: none;
+            &:checked + .cb-dummy{
+                background-color: #0070bd;
+                border: 2px solid #0070bd;
+              &:after{
+                display: block;
+              }
+            }
+          }
+          .cb-dummy{
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 20px;
+            width: 20px;
+            border: 2px solid #999999;
+            box-sizing: border-box;
+            border-radius: 4px;
+            &:after{
+              content: "";
+              position: absolute;
+              display: none;
+              left: 4px;
+              top: 0px;
+              width: 5px;
+              height: 10px;
+              border: 2px solid #FFF;
+              border-width: 0 2px 2px 0;
+              transform: rotate(45deg);
+            }
+          }
+          .cb-dummy-lb{
+          }
+        }
       }
       .invite-members{
         display: none;
