change views for private

--- a/chatapp/app/views/room/search_form.html.erb
+++ b/chatapp/app/views/room/search_form.html.erb
@@ -9,7 +9,7 @@
   <div class="title">最新ルーム</div>
 </div>
 <div class="rooms">
-  <% @room.each do |room| %>
+  <% @rooms.each do |room| %>
         <div class="room">
             <div class="room-bg-image">
                 <% if room.image.length > 0 || room.image != nil %>
