--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -81,10 +81,17 @@
                     <%= f.label :category %>
                     <%= f.text_field :category %>
                     <%= f.label "メンバー" %>
-                    <%= collection_check_boxes(:room, :user_ids, @user_data, :id, :name,
-                      checked: room.user_ids) do |cb| %>
-                      <%= cb.label { cb.check_box + cb.text } %>
-                    <% end %><br>
+                    <% if room.private %>
+                      <%= collection_check_boxes(:room, :user_ids, @all_user, :id, :name,
+                        checked: room.user_ids) do |cb| %>
+                        <%= cb.label { cb.check_box + cb.text } %>
+                      <% end %><br>
+                    <% else %>
+                      <%= collection_check_boxes(:room, :user_ids, @joined_user, :id, :name,
+                        checked: room.user_ids) do |cb| %>
+                        <%= cb.label { cb.check_box + cb.text } %>
+                      <% end %><br>
+                    <% end %>
                     <%= f.label :name %>
                     <%= f.text_field :name, autocomplete: "off" %>
                     <%= f.label :image %><br>
