--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -102,6 +102,14 @@
                       <%= f.submit "変更する" %>
                     </div>
                   <% end %>
+                  
+                  <%= form_with url: update_member_path do |f| %>
+                    <%= f.collection_check_boxes(:member_id, @joined_user, :id, :name) do |cb| %>
+                      <%= cb.label { cb.check_box + cb.text } %>
+                    <% end %>
+                    <%= f.submit %>
+                  <% end %>
+
               </div>
             </div>
             <% end %>
