delete room table admin column

--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -127,7 +127,7 @@
                 </div>
                 </div>
               </div>
-              <% if room.admin == @current_user.id %>
+              <% if @admin_hash[@current_user.id] %>
                 <div class="modal-room-back">
                   <div class="box">
                     <div class="room-back-contents"> 
