auth room admin

--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -138,6 +138,7 @@
                 </div>
               <% end %>
             </div>
+            <p><%= alert %></p>
           </div>
         </div>
       </div>
