--- a/chatapp/app/views/room/_room_info.html.erb
+++ b/chatapp/app/views/room/_room_info.html.erb
@@ -110,7 +110,8 @@
             <label class="acd-label" for="acd-check2">ルーム管理者権限</label>
             <div class="acd-content">
               <div class="edit_room_function">
-                <%= form_with url: update_member_path, method: :patch, local: true  do |f| %>
+                <%= form_with url: update_member_path, method: :patch, local: true, 
+                              data: { turbo_confirm: "管理者を変更します" }  do |f| %>
                   <%= f.collection_check_boxes(:user_id, @joined_user, :id, :name, 
                                                 checked: @room_admins) do |cb| %>
                     <%= cb.label { cb.check_box + cb.text } %>
