fix left user image

--- a/chatapp/app/views/room/_messages.html.erb
+++ b/chatapp/app/views/room/_messages.html.erb
@@ -22,7 +22,7 @@
               <div class="message-username"><%= user["name"] %></div>
         <% else %>
           <div class="message-left">
-            <img src="http://www.haruzou.com/wp-content/uploads/illust-54.png">
+            <img src="/room_image/left-user.png">
           </div>
           <div class="message-right">
             <div class="message-user-info">
